@@ -501,6 +501,7 @@ int main(int argc, char **argv) {
 
     gettimeofday(&prev_time, NULL);
     while (!(camhandle = pslr_init( model, device ))) {
+      DPRINT("foundinwhile\n");
         gettimeofday(&current_time, NULL);
 	if( timeout == 0 || timeout > timeval_diff(&current_time, &prev_time) / 1000000.0 ) {
 	  sleep_sec(1);
@@ -510,7 +511,13 @@ int main(int argc, char **argv) {
 	}
     }
 
-    if (camhandle) pslr_connect(camhandle);
+    DPRINT("before connect\n");
+    if (camhandle) {
+        if (pslr_connect(camhandle) ) {
+	  printf("Unknown Pentax camera found.\n");
+	  exit(-1);
+        }
+    }
 
     camera_name = pslr_camera_name(camhandle);
     printf("%s: %s Connected...\n", argv[0], camera_name);
